src/objects/SOQL_Report__c.object
<CustomObject>
    <fields>
        <fullName>SOQLReportExecute__c</fullName>
        <formula>HYPERLINK(&quot;/apex/SOQLReportExecute?Id=&quot; + Id, &quot;Generate&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOQLReportExecute</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQL_Report_Name__c</fullName>
        <label>SOQL Report Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQL_Report_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SOQL Report Parent</label>
        <referenceTo>SOQL_Report__c</referenceTo>
        <relationshipLabel>SOQL Reports</relationshipLabel>
        <relationshipName>SOQL_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOQL_Source__c</fullName>
        <label>SOQL Source</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>SOQL Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SRPT-{000}</displayFormat>
        <label>SOQLReport ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOQL Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>